css/base.css
/*------------------------------------------------------------------------------------
  @group Global Reset
------------------------------------------------------------------------------------*/
* {
  padding:0;
  margin:0;
}
h1, h2, h3, h4, h5, h6, p, pre, blockquote, label, ul, ol, dl, fieldset, address { margin:1em 0; }
li, dd { margin-left:5%; }
fieldset { padding: .5em; }
select option{ padding:0 5px; }

.access{ display:none; } /* For accessibility related elements */
.clear{ clear:both; height:0px; font-size:0px; line-height:0px; overflow:hidden; }
a{ outline:none; }
a img{ border:none; }

.clearfix:after {
    content: ".";
    display: block;
    height: 0;
    clear: both;
    visibility: hidden;
}
* html .clearfix {height: 1%;}
.clearfix {display:inline-block;}
.clearfix {display: block;}

/* @end */

/*------------------------------------------------------------------------------
  @group Main Layout
------------------------------------------------------------------------------*/

body{
  font-family: Helvetica, Arial, sans-serif;
  font-size:12px;
  -webkit-font-smoothing:antialiased;
}

a{
  color:#2382c8;
  text-decoration:none;
}
a:visited{
  color:#457289;
}
a:hover{
  text-decoration:underline;
}

.sidebar{
  float:left;
  margin:0 40px 0 30px;
  width:240px;
}
.main{
  float:left;
  width:560px;
}

/* @end */

/*------------------------------------------------------------------------------
  @group Sidebar
------------------------------------------------------------------------------*/

.logo{
  display:block;
  margin:20px 0;
}

ul.nav{
  margin:20px 0;
  border-top:1px solid #ddd;
}
ul.nav li{
  list-style-type:none;
  margin:0;
  padding:8px 0;
  border-bottom:1px solid #ddd;
}
ul.nav li a{
  color:#333;
  font-weight:bold;
  text-decoration:none;
}
ul.nav li a:hover{
  color:#000;
}

.sidebar p{
  color:#666;
  line-height:1.5;
}

.fusion{
  margin-top:60px;
  font-size:11px;
}
.fusion a{
  color:#666;
}
.fusion .fusiontext{
  display:block;
  margin-top:5px;
  line-height:1.5;
  font-family:Georgia, Garamond, Times;
  font-style:italic;
}
.fusion p.note{
  margin:5px 0;
  font-size:10px;
}
.fusion p.note a{
  color:#333;
}

/* @end */

/*------------------------------------------------------------------------------
  @group Home Page
------------------------------------------------------------------------------*/

.listing .post{
  margin:40px 0;
}
.listing .post:first-child{
  margin-top:22px;
}

.listing .post p.date{
  margin:0 0 -3px 0;
}

.listing .post h2{
  margin:0 0 -5px 0;
  font-size:18px;
  border:none;
}
.listing .post h2 a{
  color:#222;
  text-decoration:none;
}

.listing .post .continue{
  font-weight:bold;
}

.listing .post.other{
  margin-left:24px;
  padding-left:10px;
  color:#666;
  border-left:1px solid #ddd;
}
.listing .post.other h2{
  margin-bottom:-3px;
  font-size:14px;
  line-height:14px;
}
.listing .post.other p:last-child{
  margin-bottom:0;
}

.listing .post.other .icon{
  float:left;
  margin-left:-35px;
  width:20px;
  height:20px;
}
.listing .post.link .icon{
  background:url(/images/icon_link.png) 0 0 no-repeat;
}

/* @end */

/*------------------------------------------------------------------------------
  @group Post Styles
------------------------------------------------------------------------------*/

.main{
  color:#333;
  line-height:1.5;
}

.main p.date{
  color:#666;
  margin:20px 0 -22px 0;
}

h1{
  margin:20px 0 10px 0;
  font-size:20px;
  color:#000;
}

h2{
  margin:1em 0 -0.5em 0;
  font-size:1em;
  color:#000;
  border-bottom:1px dotted #BBB;
}

h3{
  margin:12px 0 -15px 0;
  font-size:12px;
  color:#000;
}
h3 a, h3 a:visited{ color:#000; }
h3 a:hover{ color:#000; border:none; }

h4{
  font-size:1em;
  font-weight:normal;
  color:#000;
}

.figure{
  margin:19px 0 1em 0;
  padding:2px;
  text-align:center;
  border:1px solid #ddd;
  background:#f5f5f5;
  line-height:0;
}
.fig-a{
  float:right;
  margin-left:15px;
}
.figure small{
  margin:2px 0 0 0;
  padding:5px 7px;
  display:block;
  font-size:10px;
  line-height:12px;
  text-align:left;
  color:#666;
  background:#ddd;
}
.figure small strong{
  text-transform:uppercase;
}

blockquote{
  margin:1em 0;
  padding:0 35px;
  font-size:11px;
  border:1px dotted #ddd;
  border-left:none;
  border-right:none;
  background:url(../images/blockquote_open.gif) 0 12px no-repeat;
}
blockquote p{
  margin:12px 0;
  color:#000;
}

table{
	width:100%;
	border-top:1px solid #CCCCCC;
	border-bottom:2px solid #CCC;
	color:#000000;
	background:#FFFFFF;
	border-collapse:separate;
	font-size:11px;
}
caption{
	padding:10px 10px 5px 0;
	text-align:left;
	font-size:11px;
	text-transform:uppercase;
	font-weight:bold;
}
th{
	text-align:center;
	padding:5px;
}
td{
	text-align:center;
	padding:3px 5px;
}
.odd td{
	background:#F0F1F2;
}
table.data th, table.data td{
  text-align:left;
}

.main ul, .main ol{
  margin:16px 0;
}
.main ul li{
  list-style-type:none;
  margin-left:10px;
  margin-bottom:5px;
  padding-left:15px;
  background:url(../images/icon_li.gif) 0 5px no-repeat;
}
.main ol li{
  margin-left:32px;
  margin-bottom:5px;
}

/* @end */

/*------------------------------------------------------------------------------------
  Code Styles
------------------------------------------------------------------------------------*/

pre{
  margin:16px 0;
  padding-left:10px;
  border-left:1px solid #eee;
  overflow:auto;
}
pre code{
  display:block;
}
pre>code{
  padding-top:15px;
  background:url(../images/pxl_code.gif) 0 0 no-repeat;
}
pre>code.html{
  background:url(../images/pxl_html.gif) 0 0 no-repeat;
}
pre>code.javascript{
  background:url(../images/pxl_javascript.gif) 0 0 no-repeat;
}
pre>code.ruby{
  background:url(../images/pxl_ruby.gif) 0 0 no-repeat;
}
pre>code.php{
  background:url(../images/pxl_php.gif) 0 0 no-repeat;
}
code{
  font-family:"Courier New", Courier, sans-serif;
  font-size:13px;
  color:#000;
}
code span.global{
  color:#3388DD;
}
code span.brackets{
  color:#777777;
}
code span.string {
  color:blue;
}
code span.symbol, code span.selectors{
  color:#1199EE;
}
code span.properties{
  color:#BB4411;
}
code span.keywords{
  color:#44BB22;
}
code span.comment{
  color:#999;
}
code span.shell{
  background:#f1f1f1;
}

code.html span.tag, code.xaml span.tag{
  color:#BB4411;
}
code.html span.attribute, code.xaml span.attribute{
  color:#44BB22;
}
code.html span.string, code.xaml span.string{
  color:blue;
}
code.html span.comment, code.xaml span.comment{
  color:#999999;
}
code.html span.doctype{
  color:#D7FF80;
}

/* @end */

/*------------------------------------------------------------------------------
  @group Default Pygments Styles
------------------------------------------------------------------------------*/

.highlight  { background: #ffffff; }
.highlight .c { color: #999988; font-style: italic } /* Comment */
.highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
.highlight .k { font-weight: normal } /* Keyword */
.highlight .o { font-weight: normal } /* Operator */
.highlight .cm { color: #999988; font-style: italic } /* Comment.Multiline */
.highlight .cp { color: #999999; font-weight: bold } /* Comment.Preproc */
.highlight .c1 { color: #999988; font-style: italic } /* Comment.Single */
.highlight .cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
.highlight .gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
.highlight .gd .x { color: #000000; background-color: #ffaaaa } /* Generic.Deleted.Specific */
.highlight .ge { font-style: italic } /* Generic.Emph */
.highlight .gr { color: #aa0000 } /* Generic.Error */
.highlight .gh { color: #999999 } /* Generic.Heading */
.highlight .gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
.highlight .gi .x { color: #000000; background-color: #aaffaa } /* Generic.Inserted.Specific */
.highlight .go { color: #888888 } /* Generic.Output */
.highlight .gp { color: #555555 } /* Generic.Prompt */
.highlight .gs { font-weight: bold } /* Generic.Strong */
.highlight .gu { color: #aaaaaa } /* Generic.Subheading */
.highlight .gt { color: #aa0000 } /* Generic.Traceback */
.highlight .kc { font-weight: bold } /* Keyword.Constant */
.highlight .kd { font-weight: bold } /* Keyword.Declaration */
.highlight .kp { font-weight: bold } /* Keyword.Pseudo */
.highlight .kr { font-weight: bold } /* Keyword.Reserved */
.highlight .kt { color: #445588; font-weight: bold } /* Keyword.Type */
.highlight .m { color: #009999 } /* Literal.Number */
.highlight .s { color: #d14 } /* Literal.String */
.highlight .na { color: #008080 } /* Name.Attribute */
.highlight .nb { color: #0086B3 } /* Name.Builtin */
.highlight .nc { color: #445588; font-weight: bold } /* Name.Class */
.highlight .no { color: #008080 } /* Name.Constant */
.highlight .ni { color: #800080 } /* Name.Entity */
.highlight .ne { color: #990000; font-weight: bold } /* Name.Exception */
.highlight .nf { color: #990000; font-weight: bold } /* Name.Function */
.highlight .nn { color: #555555 } /* Name.Namespace */
.highlight .nt { color: #000080 } /* Name.Tag */
.highlight .nv { color: #008080 } /* Name.Variable */
.highlight .ow { font-weight: bold } /* Operator.Word */
.highlight .w { color: #bbbbbb } /* Text.Whitespace */
.highlight .mf { color: #009999 } /* Literal.Number.Float */
.highlight .mh { color: #009999 } /* Literal.Number.Hex */
.highlight .mi { color: #009999 } /* Literal.Number.Integer */
.highlight .mo { color: #009999 } /* Literal.Number.Oct */
.highlight .sb { color: #d14 } /* Literal.String.Backtick */
.highlight .sc { color: #d14 } /* Literal.String.Char */
.highlight .sd { color: #d14 } /* Literal.String.Doc */
.highlight .s2 { color: #d14 } /* Literal.String.Double */
.highlight .se { color: #d14 } /* Literal.String.Escape */
.highlight .sh { color: #d14 } /* Literal.String.Heredoc */
.highlight .si { color: #d14 } /* Literal.String.Interpol */
.highlight .sx { color: #d14 } /* Literal.String.Other */
.highlight .sr { color: #009926 } /* Literal.String.Regex */
.highlight .s1 { color: #d14 } /* Literal.String.Single */
.highlight .ss { color: #990073 } /* Literal.String.Symbol */
.highlight .bp { color: #999999 } /* Name.Builtin.Pseudo */
.highlight .vc { color: #008080 } /* Name.Variable.Class */
.highlight .vg { color: #008080 } /* Name.Variable.Global */
.highlight .vi { color: #008080 } /* Name.Variable.Instance */
.highlight .il { color: #009999 } /* Literal.Number.Integer.Long */

/* @end */

